--- a/src/PointOfSale/PointOfSale.csproj
+++ b/src/PointOfSale/PointOfSale.csproj
@@ -3,5 +3,9 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="System.Reactive" Version="4.4.1" />
+    </ItemGroup>
     
 </Project>
